<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">PasswordShield_demo0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Subtitle: Carpe diem.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="password_vault">Password Vault</string>

    <string name="menu_password_generator">Password Generator</string>
    <string name="password_generator">Password Generator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="drawer_username">Username</string>
    <string name="place_holder">A place holder.</string>
    <string name="refresh">Refresh</string>
    <string name="copy_password_shield">Copy</string>
    <string name="password_length">Length</string>
    <string name="password_AZ">A-Z</string>
    <string name="password_az">a-z</string>
    <string name="password_numbers">0-9</string>
    <string name="password_punctuation">!@#$%^&amp;*</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="security_header">Security</string>
    <string name="auto_fill_header">Auto Fill</string>
    <string name="account_header">Account</string>
    <string name="others_header">Others</string>

    <!-- Security Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="time_to_lock">Time to lock</string>
    <string name="unlock_with_fingerprint">Unlock with fingerprint</string>
    <string name="lock_now">Lock now</string>
    <string name="unlock_with_face">Unlock with face</string>

    <string name="one_minute">1 minute</string>
    <string name="fifteen_minutes">15 minute</string>
    <string name="one_hour">1 hour</string>
    <string name="never">Never</string>

    <!-- Account Preferences -->
    <string name="change_username">Change username</string>
    <string name="log_out_preference">Log out</string>

    <string name="auto_fill">Autofill</string>

    <!-- Others Preferences -->
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- ActionBar -->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <!-- Authentication activity -->
    <string name="master_password">Master Password</string>
    <string name="master_password_hint">Password Shield is locked now. 
        Please enter your master password to unlock it.</string>
    <string name="confirm">Confirm</string>
    <string name="master_password_authentication">Master Password Authentication</string>

    <string name="exit">Exit</string>

    <!-- Create User activity -->
    <string name="create_user_hint">It seems that it\'s your first time to use Password Shield. \nWe
        use a Master Password to assure that only you can use this App. \n
        Please enter the Master password that you can remember. Believe us, that will be the only
        password you need to remember!</string>
    <string name="create_user">Create an account</string>

    <string name="password_generator_no_switch_on">None of the Switches is open now.
        Turn on some of them and retry.</string>

    <!-- strings by zjc-->
    <string name="button">Button</string>
    <string name="remove_databases">下一个活动</string>

    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="biometric_dialog_title">Verification</string>
    <string name="biometric_dialog_subtitle">Verify fingerprint to continue</string>
    <string name="biometric_dialog_state_normal">Fingerprint sensor</string>
    <string name="biometric_dialog_state_failed">Failed to identify, please try again</string>
    <string name="biometric_dialog_state_error">Verification error, please enter payment password</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">Verification successful</string>
    <string name="biometric_dialog_use_password">Use Password</string>

    <string name="display_password">Display</string>
    <string name="enlarge_display">Enlarge Display</string>

    <string name="my_autofill_service">MyAutofillService</string>

    <string name="username">Username</string>
    <string name="password_is_not_valid">Your password is not valid. Its length can\'t be less than 5.
        Please enter again.</string>

    <string name="add_cancel">Cancel</string>
    <string name="add_commit">Commit</string>
    <string name="add_information">Information</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="remarks">Remarks</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="type_in_account">Type in your account</string>
    <string name="type_in_password">Type in your password</string>
    <string name="www_example_com">www.example.com</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="no_website">No website</string>
    <string name="no_remarks_cy">No remarks</string>

    <string name="protect_your_password">Protect your password.</string>
    <string name="password_shield">Password Shield</string>
    <string name="username_not_valid">Your username is not valid. It can\'t be less than 3 characters. Please enter again.</string>

    <string name="no_remarks">No remarks</string>
    <string name="back_password">return the password</string>

    <string name="wrong_master_password">Your master password is not correct.
        Please enter again.</string>

    <string name="wrong_master_passsword">Wrong master password</string>

    <string name="edit_delete">Delete</string>
    <string name="account_name">Name</string>
    <string name="Type_in_name">Type in the name</string>
    <string name="about_dialog_title">About</string>


</resources>
