<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_password_vault"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/password_vault" />
        <item
            android:id="@+id/nav_password_generator"
            android:icon="@android:drawable/stat_notify_sync_noanim"
            android:title="@string/menu_password_generator" />
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_lock_now"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/lock_now" />

    </group>



</menu>
