<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#22B5E3">
        <Button
            android:id="@+id/back_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#22B5E3"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#22B5E3"
            android:text="@string/edit"
            android:textSize="18dp"
            android:textColor="#FFFFFF"/>

    </FrameLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_account"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/key" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/information"
                        android:textSize="24dp"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_information"
                        />
                    <TextView
                        android:id="@+id/accountname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_name" />
                    <Button
                        android:id="@+id/account_name"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAllCaps="false"/>
                    <TextView
                        android:id="@+id/account_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />
                    <Button
                        android:id="@+id/username"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAllCaps="false"/>
                    <TextView
                        android:id="@+id/password_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <Button
                        android:id="@+id/password_display"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:gravity="left"
                        android:textSize="20dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAllCaps="false"
                        />
                    <TextView
                        android:id="@+id/website_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website" />
                    <Button
                        android:id="@+id/websit_display"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="20dp"
                        android:hint="@string/no_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    >
                    <ImageView
                        android:id="@+id/green_add"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:src="@drawable/green_add"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/note_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remarks" />
                    <Button
                        android:id="@+id/note_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textAllCaps="false"
                        android:hint="@string/no_remarks" />
                    <Button
                        android:id="@+id/enlarge_dispaly_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:background="@drawable/touming"
                        android:text=""
                        android:lines="3"
                        android:textAllCaps="false"
                        android:textSize="50dp"/>



                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="80px"
            android:layout_height="match_parent"

            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>